# NativeFileDialogForMac

./: .clang-format  CMakeLists.txt  README.md
Application/Mac/src/: Info.plist
Application/Windows/src/: main.cpp
src/: FileDialogs.mm  main.cpp
